--- a/Sidebar/output.css
+++ b/Sidebar/output.css
@@ -558,6 +558,54 @@ video {
   left: 0px;
 }
 
+.top-10{
+  top: 2.5rem;
+}
+
+.left-10{
+  left: 2.5rem;
+}
+
+.-left-10{
+  left: -2.5rem;
+}
+
+.-left-40{
+  left: -10rem;
+}
+
+.-left-0{
+  left: -0px;
+}
+
+.-left-52{
+  left: -13rem;
+}
+
+.-left-6{
+  left: -1.5rem;
+}
+
+.-left-64{
+  left: -16rem;
+}
+
+.-left-8{
+  left: -2rem;
+}
+
+.-left-80{
+  left: -20rem;
+}
+
+.-left-9{
+  left: -2.25rem;
+}
+
+.-left-96{
+  left: -24rem;
+}
+
 .mt-auto{
   margin-top: auto;
 }
@@ -570,6 +618,10 @@ video {
   display: grid;
 }
 
+.hidden{
+  display: none;
+}
+
 .h-full{
   height: 100%;
 }
@@ -577,6 +629,21 @@ video {
 .w-fit{
   width: -moz-fit-content;
   width: fit-content;
+}
+
+.translate-x-full{
+  --tw-translate-x: 100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-x-full{
+  --tw-translate-x: -100%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-0{
+  --tw-translate-x: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .cursor-pointer{
@@ -817,6 +884,14 @@ video {
 
 .text-\[3\]{
   color: 3;
+}
+
+.duration-150{
+  transition-duration: 150ms;
+}
+
+.duration-300{
+  transition-duration: 300ms;
 }
 
 .hover\:bg-\[\]:hover{
