--- a/FAQ/output.css
+++ b/FAQ/output.css
@@ -546,81 +546,12 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
-.absolute{
-  position: absolute;
-}
-
 .relative{
   position: relative;
 }
 
-.bottom-0{
-  bottom: 0px;
-}
-
-.bottom-1{
-  bottom: 0.25rem;
-}
-
-.bottom-10{
-  bottom: 2.5rem;
-}
-
-.bottom-20{
-  bottom: 5rem;
-}
-
-.left-0{
-  left: 0px;
-}
-
-.top-0{
-  top: 0px;
-}
-
-.top-10{
-  top: 2.5rem;
-}
-
-.top-20{
-  top: 5rem;
-}
-
-.top-2{
-  top: 0.5rem;
-}
-
-.top-14{
-  top: 3.5rem;
-}
-
-.my-2{
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
-.mt-10{
-  margin-top: 2.5rem;
-}
-
-.mt-0{
-  margin-top: 0px;
-}
-
-.mt-2{
-  margin-top: 0.5rem;
-}
-
 .mt-5{
   margin-top: 1.25rem;
-}
-
-.mb-2{
-  margin-bottom: 0.5rem;
-}
-
-.mb-5{
-  margin-bottom: 1.25rem;
 }
 
 .flex{
@@ -639,36 +570,16 @@ video {
   min-height: 100vh;
 }
 
-.w-full{
-  width: 100%;
-}
-
-.max-w-\[140\]{
-  max-width: 140;
-}
-
-.max-w-\[1400px\]{
-  max-width: 1400px;
-}
-
-.max-w-\[1000px\]{
-  max-width: 1000px;
-}
-
-.max-w-\[00px\]{
-  max-width: 00px;
-}
-
-.max-w-\[700px\]{
-  max-width: 700px;
-}
-
-.max-w-\[600px\]{
-  max-width: 600px;
-}
-
 .max-w-\[500px\]{
   max-width: 500px;
+}
+
+.max-w-\[400px\]{
+  max-width: 400px;
+}
+
+.cursor-pointer{
+  cursor: pointer;
 }
 
 .place-items-center{
@@ -683,10 +594,6 @@ video {
   justify-content: space-between;
 }
 
-.gap-1{
-  gap: 0.25rem;
-}
-
 .gap-10{
   gap: 2.5rem;
 }
@@ -695,53 +602,16 @@ video {
   gap: 5rem;
 }
 
-.gap-4{
-  gap: 1rem;
-}
-
 .gap-5{
   gap: 1.25rem;
-}
-
-.rounded{
-  border-radius: 0.25rem;
 }
 
 .rounded-xl{
   border-radius: 0.75rem;
 }
 
-.border{
-  border-width: 1px;
-}
-
-.border-t{
-  border-top-width: 1px;
-}
-
 .border-t-2{
   border-top-width: 2px;
-}
-
-.border-black{
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
-}
-
-.border-black\/5{
-  border-color: rgb(0 0 0 / 0.05);
-}
-
-.border-black\/50{
-  border-color: rgb(0 0 0 / 0.5);
-}
-
-.border-black\/20{
-  border-color: rgb(0 0 0 / 0.2);
-}
-
-.border-black\/30{
-  border-color: rgb(0 0 0 / 0.3);
 }
 
 .border-black\/10{
@@ -758,22 +628,8 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.p-4{
-  padding: 1rem;
-}
-
 .p-5{
   padding: 1.25rem;
-}
-
-.px-5{
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 
 .py-4{
@@ -785,19 +641,9 @@ video {
   text-align: center;
 }
 
-.text-6xl{
-  font-size: 3.75rem;
-  line-height: 1;
-}
-
 .text-2xl{
   font-size: 1.5rem;
   line-height: 2rem;
-}
-
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
 }
 
 .text-4xl{
@@ -814,7 +660,53 @@ video {
   color: rgb(22 163 74 / var(--tw-text-opacity));
 }
 
-.text-green-800{
-  --tw-text-opacity: 1;
-  color: rgb(22 101 52 / var(--tw-text-opacity));
+.duration-150{
+  transition-duration: 150ms;
+}
+
+.duration-\[150\]{
+  transition-duration: 150;
+}
+
+.duration-\[1\]{
+  transition-duration: 1;
+}
+
+.duration-\[15\]{
+  transition-duration: 15;
+}
+
+.duration-\[1500\]{
+  transition-duration: 1500;
+}
+
+.duration-\[1500m\]{
+  transition-duration: 1500m;
+}
+
+.duration-\[1500ms\]{
+  transition-duration: 1500ms;
+}
+
+.duration-\[\]{
+  transition-duration: ;
+}
+
+.duration-300{
+  transition-duration: 300ms;
+}
+
+.hover\:rotate-180:hover{
+  --tw-rotate: 180deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:rotate-90:hover{
+  --tw-rotate: 90deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:rotate-1:hover{
+  --tw-rotate: 1deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
