--- a/Interactive-pricing-component/output.css
+++ b/Interactive-pricing-component/output.css
@@ -572,6 +572,32 @@ video {
   cursor: pointer;
 }
 
+.toggle-switch {
+  position: relative;
+  cursor: pointer;
+  background-color: hsl(223, 50%, 87%);
+  padding: 1rem 2rem;
+  border-radius: 1rem;
+}
+
+.toggle-switch.switch-on {
+  background-color: blue;
+}
+
+.switch-circle.switch-on {
+  transform: translate(200%, -50%);
+}
+
+.switch-circle {
+  position: absolute;
+  background-color: white;
+  width: 20px;
+  height: 20px;
+  transform: translate(30%, -50%);
+  left: 0;
+  border-radius: 50%;
+}
+
 .absolute{
   position: absolute;
 }
@@ -590,10 +616,6 @@ video {
 
 .top-0{
   top: 0px;
-}
-
-.top-1\/2{
-  top: 50%;
 }
 
 .z-0{
@@ -616,20 +638,8 @@ video {
   display: grid;
 }
 
-.h-10{
-  height: 2.5rem;
-}
-
-.h-2{
-  height: 0.5rem;
-}
-
 .min-h-screen{
   min-height: 100vh;
-}
-
-.w-10{
-  width: 2.5rem;
 }
 
 .w-44{
@@ -642,11 +652,6 @@ video {
 
 .-translate-x-1\/2{
   --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-y-1\/2{
-  --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -706,11 +711,6 @@ video {
 .bg-neutral-l-grayish-blue{
   --tw-bg-opacity: 1;
   background-color: hsl(224 65% 95% / var(--tw-bg-opacity));
-}
-
-.bg-primary-light-red{
-  --tw-bg-opacity: 1;
-  background-color: hsl(15 100% 70% / var(--tw-bg-opacity));
 }
 
 .bg-white{
@@ -792,4 +792,10 @@ video {
 .text-neutral-l-grayish-blue{
   --tw-text-opacity: 1;
   color: hsl(224 65% 95% / var(--tw-text-opacity));
+}
+
+.transition-all{
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
